@@ -77,18 +77,16 @@
                               datacategoryname="sender_name"
                               datahostname="hostname"
                               datahostnamebaseline="hostname"
-                              datametrictype="metric_type"
-                              datametrictypebaseline="metric_type"
-                              datasrcname="srcname"
-                              datasrcnamebaseline="sink"
-                              datadstname="dstname"
-                              datadstnamebaseline="source"
-                              dataeventcount="metric_count"
-                              dataeventcountbaseline="event_count"
+                              datametrictype="perf_type"
+                              datametrictypebaseline="perf_type"
+                              datasrcname="portname"
+                              datasrcnamebaseline="portname"
+                              dataeventcount="perf_count"
+                              dataeventcountbaseline="perf_count"
                               databesttime="best_time"
                               databesttimebaseline="best_time"
-                              dataavgtime="avg_time"
-                              dataavgtimebaseline="avg_time"
+                              dataavgtime="average_time"
+                              dataavgtimebaseline="average_time"
                               dataworsttime="worst_time"
                               dataworsttimebaseline="worst_time"
                               enableviewstate="false" />
